--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,24 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
+    android:weightSum="1">
+
+    <ImageView android:layout_height="wrap_content" android:layout_width="match_parent" android:src="@drawable/icon" android:id="@+id/image"
+        android:layout_weight="0.74"></ImageView>
+
+    <Button
+        android:layout_width="133dp"
+        android:layout_height="wrap_content"
+        android:text="Process"
+        android:id="@+id/processButton"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/statusText"
+        android:layout_gravity="center_horizontal"
+        android:text="Status" />
+
     <ProgressBar style="?android:attr/progressBarStyleHorizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/progressBar"></ProgressBar>
-    <TextView android:text="width" android:id="@+id/width" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-    <TextView android:text="height" android:id="@+id/height" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/icon" android:id="@+id/image"></ImageView>
 </LinearLayout>
