--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,17 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black">#000000</color>
+    <color name="brown">#774400</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FF7700</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="green">#00FF00</color>
+    <color name="blue">#0000FF</color>
+    <color name="violet">#800080</color>
+    <color name="grey">#666666</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gold">#FFD700</color>
+    <color name="silver">#C0C0C0</color>
 </resources>
